--- a/flask_app/templates/new.html
+++ b/flask_app/templates/new.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <form action = '/new' method = 'post'>
+        {% with messages = get_flashed_messages(category_filter = ['recipe']) %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{message}}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <h2>Add new Recipe</h2>
         <div>
             <label for = 'name'>Name:</label>
