--- a/flask_app/templates/edit.html
+++ b/flask_app/templates/edit.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <form action = '/update/{{recipe.id}}' method = 'post'>
+        {% with messages = get_flashed_messages(category_filter = ['recipe']) %}
+            {% if messages %}
+                {% for message in messages %}
+                    <p>{{message}}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
         <h2>Edit Recipe</h2>
         <div>
             <label for = 'name'>Name:</label>
